--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
         callNumber: '00',
 //        callNumber: 'webitel_in',
         vertoConf: {
-          server: 'wss://pre.webitel.com:8082',
-//          server: 'wss://switch-d1.webitel.com:8082',
+          server: 'wss://mysrv:8082',
           login: '100@10.10.10.144',
-//          login: 'webitel.ua@switch-d1.webitel.com',
           passwd: '100'
-//          passwd: 'T9j5BlK8aX'
         }
     })
   </script>
